# peotry_liquibase_neo4j_fastapi

./: .env  Dockerfile  README.md  ToDo.txt  docker-compose.yml  docomp.txt  notes.txt  noxfile.py  pyproject.toml  requirements.txt
backupfiles/: Backupmain.py  Dckrfile.txt  Dckrfl_wrong_driver.txt  docker.txt  dockercompliquibase1.txt  dockercompliquinase2.txt  liquibase_properties.txt  liquibase_propertiesV1.txt  liquibase_propertiesV2.txt  main_before_User_Responce.py  makemigration_global_v1.py  makemigration_global_v2.py  model_registry_global_v2.py  model_registry_global_v4.py  model_registry_global_v5_import_module_and_get_models_classes.py  neo4j-changelog.txt  poetry_lock_before_nox.txt  statuslog_20240924144559.xml
backupfiles/api/: api_models_Org.py
backupfiles/backup_liquibase_tool/: 2autodetector_before_statuscheck.py  2state copy.py  5autodetector_before_constraints_compare.py
backupfiles/before_statuslog_filter_changes/: 6autodetector_before_modified_field_return.py  autodetector copy 2.py  autodetector copy 3.py  autodetector copy 4.py  autodetector copy 5.py  autodetector copy 6.py  autodetector copy.py
backupfiles/changelogs/: changelog1.xml  example-changelog.cypher  example-changelog.json  example-changelog.sql  example-changelog.xml  example-changelog.yaml  example-changelog2.xml  example-changelog3.xml  example-changelog8.xml
backupfiles/liquibase_migration_tool/: __init__.py
backupfiles/migrations/: changelog_20240925061616.xml  statuslog_20240925003517.xml  statuslog_20240925061616.xml  statuslog_20240926103842.xml
migrations/: db.changelog-master.xml  neo4j-changelog.xml  testchnglog_20240912043013.xml
src/: Test-example-changelog.xml  a.grass  api.py  api_copy.py  api_models.py  changelog2.xml  config.py  database_models.py  example-changelog.sql  example-changelog1.json  example-changelog1.sql  example-changelog1.xml  example-changelog10.xml  example-changelog11.xml  example-changelog2.json  example-changelog4.xml  example-changelog5.xml  example-changelog6.xml  example-changelog7.xml  example-changelog9.xml  execute_liquibase.sh  liquibase.properties  liquibase_propertiesV3.txt  main.py  makemigration_global.py  makemigration_global_v3.py  model_registry_global.py  model_registry_global_v5_import_module_and_get_models_classes.py  run_liquibase.sh  settings_django.txt
src/activity/: models.py  schemas.py  views.py
(+135 files in other folders)
